# eightbits-terminal

./: README.md  pyproject.toml
examples/: demo.py
src/eightbits/: __init__.py  alignment.py  colors.py  format.py  input.py  output.py  tabular.py
test/: test_colors.py  test_format.py  test_input.py  test_output.py  test_tabular.py
