[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eightbits-terminal"
version = "2.0.0"
authors = [
  { name="Agustín Comolli", email="agustincomolli@gmail.com" },
]
description = "Una librería para mejorar la interacción en la consola"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[tool.setuptools]
packages = ["eightbits"]
package-dir = { "" = "src" }
include-package-data = true
license-files = []