[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eightbits-terminal"
version = "2.0.0"
authors = [
  { name="Agustín Comolli", email="agustincomolli@gmail.com" },
]
description = "Modern Python library for building beautiful terminal applications."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

keywords = [
    "terminal",
    "cli",
    "console",
    "ansi",
    "python",
    "colors",
    "table"
]

[project.urls]
Homepage = "https://github.com/agustincomolli/eightbits-terminal"
Repository = "https://github.com/agustincomolli/eightbits-terminal"
Issues = "https://github.com/agustincomolli/eightbits-terminal/issues"

[tool.setuptools]
packages = ["eightbits"]
package-dir = { "" = "src" }
include-package-data = true
license-files = []